--- a/public/css/app.css
+++ b/public/css/app.css
@@ -189,8 +189,94 @@ img {
     display: flex;
     align-items: center;
 }
+#listLinks.head-{
+    padding: 0;
+    height: 80px;
+}
+#listLinks.head- li {
+    padding: 0;
+    height: 100%;
+    margin: 0;
+}
+#listLinks.head- li a{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    padding: 10px;
+    font-weight: 500;
+    font-size: 14px;
+}
+#listLinks.head- li a img{
+    margin: 0;
+}
+
 #listLinks.main-{
     min-height: initial;
+    padding: 0;
+    display: flex;
+    flex-direction: row;
+    margin-top: 5%!important;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-flex-flow: row wrap;
+    -ms-flex-flow: row wrap;
+    flex-flow: row wrap;
+    -webkit-align-content: flex-end;
+    -ms-flex-line-pack: end;
+    align-content: flex-end;
+
+}
+.red{
+    background: #C5192D !important;
+}
+#listLinks.main- li{
+    width: 125px !important;
+    height: 125px;
+    background: gray;
+    color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+}
+#listLinks.main- li a{
+    width: 100%;
+    height: 80px;
+}
+#listLinks.main- li a p{
+    width: 100%;
+    height: 20%;
+    color: white;
+}
+#listLinks.main- li a .iC {
+    width: 100%;
+    height: 80%;
+   padding-top: 10px;
+}
+#listLinks.main- li a .iC img{
+    width: 50px;
+    height: initial;
+    max-height: initial;
+    max-width: initial;
+}
+#listLinks.main- li .hears{
+    width: 100%;
+    height: 20%;
+    background: rgba(0,0,0,0.5) url('../images/hear.png') center no-repeat;
+    background-size: contain;
 }
 /*#listLinks li:first-of-type{*/
 /*    !* background: #224a6d; *!*/
@@ -261,6 +347,21 @@ img {
     text-decoration: none !important;
     transition: all 400ms ease-in-out;
 }
+
+#listLinks li .active_navbar_li {
+    /*color: #cf0b0b;*/
+    color: white;
+}
+#listLinks li.active_navbar_li {
+    animation: fadein 2s;
+    display: flex;
+    flex-direction: column;
+}
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
 .submenu{
     display:none;
 }
@@ -273,12 +374,6 @@ img {
 
 #listLinks li:hover a {
     color: #cf0b0b;
-}
-#listLinks li .active_navbar_li {
-    color: #cf0b0b;
-}
-#listLinks li.active_navbar_li {
-    display: block;
 }
 
 #listLinks li span {
@@ -731,4 +826,61 @@ a.logout {
 }
 #player h1 {
     display:none;
+}
+.preloader {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    background-image: url('../images/infinity.gif');
+    background-repeat: no-repeat;
+    background-color: #FFF;
+    background-position: center;
+}
+#sidebar-menu ul{
+    list-style:none;
+    padding: 0;
+}
+
+#sidebar-menu ul li{
+    height: 60px;
+    margin: 0 0 15px 0;
+}
+#sidebar-menu ul li a{
+    width: 80%;
+    height: 100%;
+    color:white;
+    float: left;
+}
+#sidebar-menu ul li a p{
+    text-align: center;
+    vertical-align: middle;
+    height: 100%;
+    line-height: 60px;
+}
+
+#sidebar-menu ul li .hears{
+    width: 15%;
+    height: 100%;
+    background: rgba(0,0,0,0.5) url('../images/hear.png') center no-repeat;
+    float: left;
+}
+#back{
+    margin: 20px auto;
+    width: 80px;
+    height: 80px;
+    font-size: 12px;
+    color: white;
+    background: #2724A8;
+    display: block;
+    border-radius:5px ;
+    text-transform: uppercase;
+    padding: 10px;
+    text-align: center;
+
+}
+#back img{
+    width: 30px;
 }
