--- a/public/css/app.css
+++ b/public/css/app.css
@@ -190,7 +190,7 @@ img {
 }
 #listLinks.head-{
     padding: 0;
-    height: 80px;
+    height: 60px;
 }
 #listLinks.head- li {
     padding: 0;
@@ -201,7 +201,7 @@ img {
     display: flex;
     flex-direction: column;
     height: 100%;
-    padding: 10px;
+    padding: 0 10px;
     font-weight: 500;
     font-size: 12px;
     align-items: center;
@@ -300,7 +300,7 @@ img {
    padding-top: 10px;
 }
 #listLinks.main- li a .iC img{
-    width: 50px;
+    width: 70px;
     height: initial;
     max-height: initial;
     max-width: initial;
@@ -430,9 +430,7 @@ img {
 }
 
 #listLinks li:hover img {
-    border-radius: 50%;  /* on arrondit l'image */
-    -webkit-transform: rotate(360deg); /* rotation de l'image */
-    transform: rotate(360deg);
+    transform: scale(1.2);
     -webkit-filter: sepia(0);
     filter: sepia(0);
 }
@@ -628,7 +626,7 @@ h2 {
 .bloc_list_video {
     position: relative;
     margin-top: 2vh;
-    height: auto !important;
+    height: 40vh !important;
 }
 #carouselVideoLoading {
     position: absolute;
@@ -665,6 +663,7 @@ h2 {
 }
 .carousel-video .item {
     display: inline-block;
+    float:left;
     cursor: pointer;
     margin: 0 0 10px 0;
     /* width: 100px; */
@@ -813,12 +812,25 @@ img.jssocials-share-logo {
 }
 a.logout {
     padding: 10px 15px;
-    display: inline-block;
+    /*display: inline-block;*/
     color: #606060;
     outline: none !important;
     text-decoration: none !important;
     transition: all 400ms ease-in-out;
     cursor: pointer;
+}
+#home img{
+    width: 50px;
+    display: block;
+}
+#home{
+    margin-right: 15px;
+}
+#home a {
+    display:block;
+}
+.space{
+    flex-grow: 2; /* default 0 */
 }
 .dark-mode a.logout {
     color: #ffffff;
@@ -879,7 +891,7 @@ a.logout {
     background-position: center;
 }
 #sidebar-menu{
-
+    margin-top: 10px;
 }
 #sidebar-menu ul{
     width: 100%;
@@ -909,9 +921,13 @@ a.logout {
     flex-direction: column;
 }
 .desc{
-    width: 100%;
-    height: 60px;
+    height: auto;
     overflow: hidden;
+    padding: 10px;
+}
+.vid-title{
+    font-weight: 700;
+    margin-bottom: 5px;
 }
 .desc p{
     width: 80%;
@@ -922,6 +938,7 @@ a.logout {
     overflow: hidden;
 }
 .desc .hears{
+    display: none;
     width: 20%;
     height: 100%;
     background: url('../images/hear-black.png') center no-repeat;
@@ -954,13 +971,12 @@ a.logout {
     width: 30px;
 }
 .item-contenair{
-    display: inline-block;
+    display: table;
     cursor: pointer;
     margin: 0 5px;
     /* width: 100px; */
-    text-align: center;
-    width: auto;
-    max-width: 180px;
+    width: 100%;
+    /*max-width: 180px;*/
     white-space: pre-wrap;
     vertical-align: top;
     transition: ease-in-out 0.2s;
